--- a/homepage.html
+++ b/homepage.html
@@ -6,12 +6,68 @@
     <meta name="viewport" content="width= , initial-scale=1.0">
     <link href="//db.onlinewebfonts.com/c/d7e8a95865396cddca89b00080d2cba6?family=SoDo+Sans+SemiBold" rel="stylesheet"
         type="text/css" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Starbucks</title>
 </head>
 
 <body>
-    <h1>Menu</h1>
+    <nav class="navbar">
+        <div class="navbar-container">
+            <div class=navbar-brand>
+                <a href="#">
+                    <img src="./images/logo.svg" alt="Starbucks logo">
+                </a>
+            </div>
+
+            <ul class="navbar-nav-left">
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">Rewards</a></li>
+                <li><a href="#">Gift Cards</a></li>
+            </ul>
+
+            <ul class="navbar-nav-right">
+                <li>
+                    <a href="#">
+                        <svg fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" width="800px" height="800px"
+                            viewBox="0 0 395.71 395.71" xml:space="preserve">
+                            <g>
+                                <path d="M197.849,0C122.131,0,60.531,61.609,60.531,137.329c0,72.887,124.591,243.177,129.896,250.388l4.951,6.738
+		c0.579,0.792,1.501,1.255,2.471,1.255c0.985,0,1.901-0.463,2.486-1.255l4.948-6.738c5.308-7.211,129.896-177.501,129.896-250.388
+		C335.179,61.609,273.569,0,197.849,0z M197.849,88.138c27.13,0,49.191,22.062,49.191,49.191c0,27.115-22.062,49.191-49.191,49.191
+		c-27.114,0-49.191-22.076-49.191-49.191C148.658,110.2,170.734,88.138,197.849,88.138z" />
+                            </g>
+                        </svg>
+                        <span>Find a store</span>
+                    </a>
+                </li>
+                <li><button class="btn btn-dark-outline">Sign In</button></li>
+                <li><button class="btn btn-dark">Join Now</button></li>
+            </ul>
+            <!--
+                Hamburger Menu
+            -->
+            <button type="button" class="hamburger" id="menu-btn">
+                <span class="hamburger--top"></span>
+                <span class="hamburger--middle"></span>
+                <span class="hamburger--bottom"></span>
+            </button>
+        </div>
+    </nav>
+    <section class="box">
+        <div class="content-container">
+            <div class="content">
+                <h1>Talk about refreshing</h1>
+                <p>Introducing our vibrant new Frozen Lemonade Starbucks Refreshers® beverages: Strawberry Açaí,
+                    Pineapple Passionfruit and Mango Dragonfruit.</p>
+                <button class="btn btn-dark-outline">Order now</button>
+            </div>
+        </div>
+
+        <div class="drinks">
+            <img src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-84430.jpg" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
