add some changes

--- a/homepage.html
+++ b/homepage.html
@@ -54,7 +54,7 @@
             </button>
         </div>
     </nav>
-    <section class="box">
+    <section class="box reverse" id="box1">
         <div class="content-container">
             <div class="content">
                 <h1>Talk about refreshing</h1>
@@ -68,6 +68,23 @@
             <img src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-84430.jpg" alt="">
         </div>
     </section>
+
+    <section class="box" id="box2">
+        <div class="drinks">
+            <img src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-84431.jpg" alt="">
+        </div>
+        <div class="content-container">
+            <div class="content">
+                <h1>Soak up delicious Rewards</h1>
+                <p>You’re closer than you think to free drinks & food.*</p>
+                <button class="btn btn-dark-outline">Order now</button>
+            </div>
+        </div>
+
+
+    </section>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
