correct the code

--- a/homepage.html
+++ b/homepage.html
@@ -52,8 +52,25 @@
                 <span class="hamburger--middle"></span>
                 <span class="hamburger--bottom"></span>
             </button>
+
         </div>
     </nav>
+    <!-- Mobile menu -->
+    <div class="mobile-menu hidden" id="menu">
+        <ul class="navbar-head">
+            <li><a href="#">Menu</a></li>
+            <li><a href="#">Rewards</a></li>
+            <li><a href="#">Gift Cards</a></li>
+        </ul>
+        <div class="mobile-menu-bottom">
+            <botton class="btn btn-dark-outline">Sign In</botton>
+            <botton class="btn btn-dark">Join Now</botton>
+            <div>
+                <a href="#"><img src="./img/location.svg" alt="">Find a Store</a>
+            </div>
+
+        </div>
+    </div>
     <section class="box reverse" id="box1">
         <div class="content-container">
             <div class="content">
