edit scrapper file

--- a/homepage.html
+++ b/homepage.html
@@ -66,7 +66,7 @@
             <botton class="btn btn-dark-outline">Sign In</botton>
             <botton class="btn btn-dark">Join Now</botton>
             <div>
-                <a href="#"><img src="./img/location.svg" alt="">Find a Store</a>
+                <a href="#"><img src="./location.svg" alt="">Find a Store</a>
             </div>
 
         </div>
