--- a/homepage.html
+++ b/homepage.html
@@ -11,95 +11,159 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="navbar-container">
-            <div class=navbar-brand>
-                <a href="#">
-                    <img src="./images/logo.svg" alt="Starbucks logo">
-                </a>
-            </div>
+    <main>
 
-            <ul class="navbar-nav-left">
+
+        <nav class="navbar">
+            <div class="navbar-container">
+                <div class=navbar-brand>
+                    <a href="#">
+                        <img src="./images/logo.svg" alt="Starbucks logo">
+                    </a>
+                </div>
+
+                <ul class="navbar-nav-left">
+                    <li><a href="#">Menu</a></li>
+                    <li><a href="#">Rewards</a></li>
+                    <li><a href="#">Gift Cards</a></li>
+                </ul>
+
+                <ul class="navbar-nav-right">
+                    <li>
+                        <a href="#">
+                            <svg fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" width="800px" height="800px"
+                                viewBox="0 0 395.71 395.71" xml:space="preserve">
+                                <g>
+                                    <path d="M197.849,0C122.131,0,60.531,61.609,60.531,137.329c0,72.887,124.591,243.177,129.896,250.388l4.951,6.738
+		c0.579,0.792,1.501,1.255,2.471,1.255c0.985,0,1.901-0.463,2.486-1.255l4.948-6.738c5.308-7.211,129.896-177.501,129.896-250.388
+		C335.179,61.609,273.569,0,197.849,0z M197.849,88.138c27.13,0,49.191,22.062,49.191,49.191c0,27.115-22.062,49.191-49.191,49.191
+		c-27.114,0-49.191-22.076-49.191-49.191C148.658,110.2,170.734,88.138,197.849,88.138z" />
+                                </g>
+                            </svg>
+                            <span>Find a store</span>
+                        </a>
+                    </li>
+                    <li><button class="btn btn-dark-outline">Sign In</button></li>
+                    <li><button class="btn btn-dark">Join Now</button></li>
+                </ul>
+                <!--
+                Hamburger Menu
+            -->
+                <button type="button" class="hamburger" id="menu-btn">
+                    <span class="hamburger--top"></span>
+                    <span class="hamburger--middle"></span>
+                    <span class="hamburger--bottom"></span>
+                </button>
+
+            </div>
+        </nav>
+        <!-- Mobile menu -->
+        <div class="mobile-menu hidden" id="menu">
+            <ul class="navbar-head">
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">Rewards</a></li>
                 <li><a href="#">Gift Cards</a></li>
             </ul>
+            <div class="mobile-menu-bottom">
+                <botton class="btn btn-dark-outline">Sign In</botton>
+                <botton class="btn btn-dark">Join Now</botton>
+                <div>
+                    <a href="#"><img src="./location.svg" alt="">Find a Store</a>
+                </div>
 
-            <ul class="navbar-nav-right">
-                <li>
-                    <a href="#">
-                        <svg fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink" width="800px" height="800px"
-                            viewBox="0 0 395.71 395.71" xml:space="preserve">
-                            <g>
-                                <path d="M197.849,0C122.131,0,60.531,61.609,60.531,137.329c0,72.887,124.591,243.177,129.896,250.388l4.951,6.738
-		c0.579,0.792,1.501,1.255,2.471,1.255c0.985,0,1.901-0.463,2.486-1.255l4.948-6.738c5.308-7.211,129.896-177.501,129.896-250.388
-		C335.179,61.609,273.569,0,197.849,0z M197.849,88.138c27.13,0,49.191,22.062,49.191,49.191c0,27.115-22.062,49.191-49.191,49.191
-		c-27.114,0-49.191-22.076-49.191-49.191C148.658,110.2,170.734,88.138,197.849,88.138z" />
-                            </g>
-                        </svg>
-                        <span>Find a store</span>
-                    </a>
-                </li>
-                <li><button class="btn btn-dark-outline">Sign In</button></li>
-                <li><button class="btn btn-dark">Join Now</button></li>
-            </ul>
-            <!--
-                Hamburger Menu
-            -->
-            <button type="button" class="hamburger" id="menu-btn">
-                <span class="hamburger--top"></span>
-                <span class="hamburger--middle"></span>
-                <span class="hamburger--bottom"></span>
-            </button>
-
-        </div>
-    </nav>
-    <!-- Mobile menu -->
-    <div class="mobile-menu hidden" id="menu">
-        <ul class="navbar-head">
-            <li><a href="#">Menu</a></li>
-            <li><a href="#">Rewards</a></li>
-            <li><a href="#">Gift Cards</a></li>
-        </ul>
-        <div class="mobile-menu-bottom">
-            <botton class="btn btn-dark-outline">Sign In</botton>
-            <botton class="btn btn-dark">Join Now</botton>
-            <div>
-                <a href="#"><img src="./location.svg" alt="">Find a Store</a>
-            </div>
-
-        </div>
-    </div>
-    <section class="box reverse" id="box1">
-        <div class="content-container">
-            <div class="content">
-                <h1>Talk about refreshing</h1>
-                <p>Introducing our vibrant new Frozen Lemonade Starbucks Refreshers® beverages: Strawberry Açaí,
-                    Pineapple Passionfruit and Mango Dragonfruit.</p>
-                <button class="btn btn-dark-outline">Order now</button>
             </div>
         </div>
-
-        <div class="drinks">
-            <img src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-84430.jpg" alt="">
-        </div>
-    </section>
-
-    <section class="box" id="box2">
-        <div class="drinks">
-            <img src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-84431.jpg" alt="">
-        </div>
-        <div class="content-container">
-            <div class="content">
-                <h1>Soak up delicious Rewards</h1>
-                <p>You’re closer than you think to free drinks & food.*</p>
-                <button class="btn btn-dark-outline">Order now</button>
+        <section class="box reverse" id="box1">
+            <div class="content-container">
+                <div class="content">
+                    <h1>Talk about refreshing</h1>
+                    <p>Introducing our vibrant new Frozen Lemonade Starbucks Refreshers® beverages: Strawberry Açaí,
+                        Pineapple Passionfruit and Mango Dragonfruit.</p>
+                    <button class="btn btn-dark-outline">Order now</button>
+                </div>
             </div>
+
+            <div class="drinks">
+                <img src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-84430.jpg" alt="">
+            </div>
+        </section>
+
+        <section class="box" id="box2">
+            <div class="drinks">
+                <img src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-84431.jpg" alt="">
+            </div>
+            <div class="content-container">
+                <div class="content">
+                    <h1>Soak up delicious Rewards</h1>
+                    <p>You’re closer than you think to free drinks & food.*</p>
+                    <button class="btn btn-dark-outline">Order now</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="box reverse" id="box3">
+
+            <div class="content-container">
+                <div class="content">
+                    <h1>Summer to the max</h1>
+                    <p>Go for a Mocha Cookie Crumble or Caramel Ribbon Crunch Frappuccino® blended beverage.</p>
+                    <button class="btn btn-dark-outline">Order now</button>
+                </div>
+            </div>
+            <div class="drinks">
+                <img src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-84432.jpg" alt="">
+            </div>
+        </section>
+
+        <section class="box" id="box4">
+            <div class="drinks">
+                <img src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-84433.jpg" alt="">
+            </div>
+            <div class="content-container">
+                <div class="content">
+                    <h1>Get there satisfied</h1>
+                    <p>Fill up on the way with a Spinach, Feta & Egg White Wrap or Bacon, Sausage & Egg Wrap.</p>
+                    <button class="btn btn-dark-outline">Order now</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="box reverse" id="box5">
+
+            <div class="content-container">
+                <div class="content">
+                    <h1>Be kind to your mind</h1>
+                    <p>We teamed up with Headspace to bring you four free meditations on kindness, plus a special offer
+                        for
+                        Starbucks® Rewards members—discover more mindfulness with a two-month free membership.**</p>
+                    <button class="btn btn-dark-outline">Listen now</button>
+                </div>
+            </div>
+            <div class="drinks">
+                <img src="https://content-prod-live.cert.starbucks.com/binary/v2/asset/137-84617.jpg" alt="">
+            </div>
+        </section>
+
+        <div class="note">
+            <p>
+                *Starbucks Rewards is available at participating stores. Some restrictions apply. See
+                <a href="https://starbucks.com/rewards">https://starbucks.com/rewards</a>
+            </p>
+
         </div>
+        <div class="note">
+            <p>
+                **After your two-month free trial, exclusive to Starbucks® Rewards members, the subscription renews
+                automatically at $69.99 USD for an annual subscription to Headspace. You can cancel at any time. This
+                offer
+                is
+                for new and returning Headspace users only.
+            </p>
 
-
-    </section>
+        </div>
+    </main>
+    <div>Footer</div>
 
     <script src="script.js"></script>
 </body>
