feature issue6: created new folder for gift-cards page

--- a/gift_cards.html
+++ b/gift_cards.html
@@ -4,11 +4,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="//db.onlinewebfonts.com/c/d7e8a95865396cddca89b00080d2cba6?family=SoDo+Sans+SemiBold" rel="stylesheet"
+    type="text/css" />
+    <link rel="stylesheet" href="/Cloned_Starbuck/css/gift_cards.css">
+    <link rel="shortcut icon" href="" type="image/">
+    <title>Starbuck Gift Cards: Starbuck Coffee Company</title>
+    
 </head>
-
 <body>
+    <header>
+        <nav>
+            Navigation
+        </nav>
+    </header>
 
+    <main class="main__container">
+        <section class="feature">
+            <div class="card__text">
+                <p class="card__text-featured">Featured</p>
+                <p class="card__text-see-all">See all</p>
+            </div>
+
+            <div class="feature__cards">
+                <div class="feature-card">
+                    <img src="./images/gift-cards-img/feature-img-1.jpg" alt="feature-card-1" class="card">
+                </div>
+
+                <div class="feature-card">
+                    <img src="./images/gift-cards-img/feature-img-2.jpg" alt="feature-card-2" class="card">
+                </div>
+
+                <div class="feature-card">
+                    <img src="images/gift-cards-img/feature-img-3.jpg" alt="feature-card-3" class="card">
+                </div>
+
+                <div class="feature-card">
+                    <img src="images/gift-cards-img/feature-img-4.jpg" alt="feature-card-4" class="card">
+                </div>
+
+                <div class="feature-card">
+                    <img src="images/gift-cards-img/feature-img-5.jpg" alt="feature-card-5" class="card">
+                </div>
+
+                <div class="feature-card">
+                    <img src="images/gift-cards-img/feature-img-6.jpg" alt="feature-card-6" class="card">
+                </div>
+
+                <div class="feature-card">
+                    <img src="images/gift-cards-img/feature-img-7.jpg" alt="feature-card-7" class="card">
+                </div>
+
+                <div class="feature-card">
+                    <img src="images/gift-cards-img/feature-img-8.jpg" alt="feature-card-8" class="card">
+                </div>
+
+                <div class="feature-card">
+                    <img src="images/gift-cards-img/feature-img-9.jpg" alt="feature-card-9" class="card">
+                </div>
+
+                <div class="feature-card">
+                    <img src="images/gift-cards-img/feature-img-10.jpg" alt="feature-card-10" class="card">
+                </div>
+
+                <div class="feature-card">
+                    <img src="images/gift-cards-img/feature-img-11.jpg" alt="feature-card-11" class="card">
+                </div>
+
+                <div class="feature-card">
+                    <img src="images/gift-cards-img/feature-img-12.jpg" alt="feature-card-12" class="card">
+                </div>
+
+                <div class="feature-card">
+                    <img src="images/gift-cards-img/feature-img-13.jpg" alt="feature-card-13" class="card">
+                </div>
+
+                <div class="feature-card">
+                    <img src="images/gift-cards-img/feature-img-14.jpg" alt="feature-card-14" class="card">
+                </div>
+
+                <div class="feature-card">
+                    <img src="images/gift-cards-img/feature-img-15.jpg" alt="feature-card-15" class="card">
+                </div>
+
+                <div class="feature-card">
+                    <img src="images/gift-cards-img/feature-img-16.jpg" alt="feature-card-16" class="card">
+                </div>
+
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
