--- a/homepage.html
+++ b/homepage.html
@@ -163,7 +163,66 @@
 
         </div>
     </main>
-    <div>Footer</div>
+    <footer>
+        <div class="footer-1">
+            <div class="footer-container">
+                <section>
+                    <h2>About Us</h2>
+                    <ul>
+                        <li><a href="">Our Company</a></li>
+                        <li><a href="">Our Coffee</a></li>
+                        <li><a href="">Stories and News</a></li>
+                        <li><a href="">Starbucks Archive</a></li>
+                        <li><a href="">Invester Relations</a></li>
+                        <li><a href="">Customer Service</a></li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Careers</h2>
+                    <ul>
+                        <li><a href="">Cultures and Values</a></li>
+                        <li><a href="">Inclusion, Diversity, and Equity</a></li>
+                        <li><a href="">College Achievement Plan</a></li>
+                        <li><a href="">Alumni Community</a></li>
+                        <li><a href="">U.S. Careers</a></li>
+                        <li><a href="">International Careers</a></li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Social Impact</h2>
+                    <ul>
+                        <li><a href="">People</a></li>
+                        <li><a href="">Planet</a></li>
+                        <li><a href="">Environmental and Social Impact Reporting</a></li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>For Business Partners</h2>
+                    <ul>
+                        <li><a href="">Landlord Support Center</a></li>
+                        <li><a href="">Suppliers</a></li>
+                        <li><a href="">Corporate Gift Card Sales</a></li>
+                        <li><a href="">Office and Foodservice Coffee</a></li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Order and Pick Up</h2>
+                    <ul>
+                        <li><a href="">Order on the App</a></li>
+                        <li><a href="">Order on the Web</a></li>
+                        <li><a href="">Delivery</a></li>
+                        <li><a href="">Order and Pick Up</a></li>
+                        <li><a href="">Explore and Find Coffee for Home</a></li>
+                    </ul>
+                </section>
+
+            </div>
+        </div>
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae esse ducimus quisquam saepe a explicabo labore
+            commodi, pariatur iure odit recusandae ad quibusdam eaque magni sequi velit reprehenderit! Velit, fugiat.
+        </p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
