updating some changes

--- a/homepage.html
+++ b/homepage.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width= , initial-scale=1.0">
-    <link href="//db.onlinewebfonts.com/c/d7e8a95865396cddca89b00080d2cba6?family=SoDo+Sans+SemiBold" rel="stylesheet"
-        type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <title>Starbucks</title>
 </head>
@@ -24,7 +25,7 @@
 
                 <ul class="navbar-nav-left">
                     <li><a href="#">Menu</a></li>
-                    <li><a href="#">Rewards</a></li>
+                    <li><a href="./rewards_page.html">Rewards</a></li>
                     <li><a href="#">Gift Cards</a></li>
                 </ul>
 
