--- a/gift_cards.html
+++ b/gift_cards.html
@@ -21,75 +21,89 @@
     <main class="main__container">
         <section class="feature">
             <div class="card__text">
-                <p class="card__text-featured">Featured</p>
-                <p class="card__text-see-all">See all</p>
+                <p class="card__text-left">Featured</p>
+                <p class="card__text-right">See all</p>
             </div>
 
-            <div class="feature__cards">
-                <div class="feature-card">
+            <div class="cards">
+                <div class="gift-card">
                     <img src="./images/gift-cards-img/feature-img-1.jpg" alt="feature-card-1" class="card">
                 </div>
 
-                <div class="feature-card">
+                <div class="gift-card">
                     <img src="./images/gift-cards-img/feature-img-2.jpg" alt="feature-card-2" class="card">
                 </div>
 
-                <div class="feature-card">
+                <div class="gift-card">
                     <img src="images/gift-cards-img/feature-img-3.jpg" alt="feature-card-3" class="card">
                 </div>
 
-                <div class="feature-card">
+                <div class="gift-card">
                     <img src="images/gift-cards-img/feature-img-4.jpg" alt="feature-card-4" class="card">
                 </div>
 
-                <div class="feature-card">
+                <div class="gift-card">
                     <img src="images/gift-cards-img/feature-img-5.jpg" alt="feature-card-5" class="card">
                 </div>
 
-                <div class="feature-card">
+                <div class="gift-card">
                     <img src="images/gift-cards-img/feature-img-6.jpg" alt="feature-card-6" class="card">
                 </div>
 
-                <div class="feature-card">
+                <div class="gift-card">
                     <img src="images/gift-cards-img/feature-img-7.jpg" alt="feature-card-7" class="card">
                 </div>
 
-                <div class="feature-card">
+                <div class="gift-card">
                     <img src="images/gift-cards-img/feature-img-8.jpg" alt="feature-card-8" class="card">
                 </div>
 
-                <div class="feature-card">
+                <div class="gift-card">
                     <img src="images/gift-cards-img/feature-img-9.jpg" alt="feature-card-9" class="card">
                 </div>
 
-                <div class="feature-card">
+                <div class="gift-card">
                     <img src="images/gift-cards-img/feature-img-10.jpg" alt="feature-card-10" class="card">
                 </div>
 
-                <div class="feature-card">
+                <div class="gift-card">
                     <img src="images/gift-cards-img/feature-img-11.jpg" alt="feature-card-11" class="card">
                 </div>
 
-                <div class="feature-card">
+                <div class="gift-card">
                     <img src="images/gift-cards-img/feature-img-12.jpg" alt="feature-card-12" class="card">
                 </div>
 
-                <div class="feature-card">
+                <div class="gift-card">
                     <img src="images/gift-cards-img/feature-img-13.jpg" alt="feature-card-13" class="card">
                 </div>
 
-                <div class="feature-card">
+                <div class="gift-card">
                     <img src="images/gift-cards-img/feature-img-14.jpg" alt="feature-card-14" class="card">
                 </div>
 
-                <div class="feature-card">
+                <div class="gift-card">
                     <img src="images/gift-cards-img/feature-img-15.jpg" alt="feature-card-15" class="card">
                 </div>
 
-                <div class="feature-card">
+                <div class="gift-card">
                     <img src="images/gift-cards-img/feature-img-16.jpg" alt="feature-card-16" class="card">
                 </div>
 
+            </div>
+        </section>
+
+        <section class="get-gift-card">
+            <div class="blog-container-1">
+                <div class="blog-left">
+                    <p class="got-a-gift-card">Got a gift card?</p>
+                    <p class="earn-2-stars-per-1-dollar">Earns 2&starf; per $1</p>
+                    <button class="add-or-reload">Add or Reload</button>
+                    <button class="check-balance">Check balance</button>
+                </div>
+                <div class="blog-right">
+                    <p class="card-term-and-conditions">Card Terms & Conditions <svg aria-hidden="true" class="valign-middle " focusable="false" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" style="width: 24px; height: 24px; overflow: visible; fill: currentcolor;"><path d="M14.75 18H7.875C6.84 18 6 17.16 6 16.125V9.25c0-1.036.84-1.875 1.875-1.875h5.11c.276 0 .5.224.5.5s-.224.5-.5.5h-5.11c-.483 0-.875.392-.875.875v6.875c0 .483.392.875.875.875h6.875c.483 0 .875-.392.875-.875V11c0-.276.224-.5.5-.5s.5.224.5.5v5.125c0 1.035-.84 1.875-1.875 1.875zM14 6.5c0-.276.224-.5.5-.5h3c.276 0 .5.224.5.5v3c0 .276-.224.5-.5.5s-.5-.224-.5-.5V7.72l-4.66 4.74c-.19.196-.507.2-.704.005-.197-.193-.2-.51-.006-.707L16.307 7H14.5c-.276 0-.5-.224-.5-.5z"></path></svg></p>
+                </div>
             </div>
         </section>
     </main>
