--- a/gift_cards.html
+++ b/gift_cards.html
@@ -12,101 +12,164 @@
     
 </head>
 <body>
+
     <header>
         <nav>
             Navigation
         </nav>
     </header>
 
-    <main class="main__container">
-        <section class="feature">
-            <div class="card__text">
-                <p class="card__text-left">Featured</p>
-                <p class="card__text-right">See all</p>
+    <main class="main-container">
+
+        <section class="cards cards__featured">
+            <div class="cards__text">
+                <p class="cards__text--type">
+                    Feartured
+                </p>
+                <p class="cards__text--see-all">
+                    See all
+                </p>
             </div>
 
-            <div class="cards">
-                <div class="gift-card">
-                    <img src="./images/gift-cards-img/feature-img-1.jpg" alt="feature-card-1" class="card">
-                </div>
+            <div class="cards__button cards__button--left">
+                <button class="cards__button--left cards__button--style">
+                    <svg aria-hidden="true" class="cards__button--style-icon" focusable="false" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" style="overflow: visible; fill: currentcolor;" ><path d="M15.098 5.78c.292-.293.292-.767 0-1.06-.293-.293-.768-.293-1.06 0L7.62 11.137c-.293.293-.293.768 0 1.06l6.52 6.52c.292.293.767.293 1.06 0 .293-.293.293-.768 0-1.06l-5.99-5.99L15.1 5.78z"></path></svg>
+                </button>
+            </div>
 
-                <div class="gift-card">
-                    <img src="./images/gift-cards-img/feature-img-2.jpg" alt="feature-card-2" class="card">
-                </div>
+            <div class="cards__items">
+                <img src="images/gift-cards-img/feature-img-1.jpg" alt="Feature cards 1" class="cards__img">
 
-                <div class="gift-card">
-                    <img src="images/gift-cards-img/feature-img-3.jpg" alt="feature-card-3" class="card">
-                </div>
+                <img src="images/gift-cards-img/feature-img-2.jpg" alt="Feature cards 2" class="cards__img">
 
-                <div class="gift-card">
-                    <img src="images/gift-cards-img/feature-img-4.jpg" alt="feature-card-4" class="card">
-                </div>
+                <img src="images/gift-cards-img/feature-img-3.jpg" alt="Feature cards 3" class="cards__img">
 
-                <div class="gift-card">
-                    <img src="images/gift-cards-img/feature-img-5.jpg" alt="feature-card-5" class="card">
-                </div>
+                <img src="images/gift-cards-img/feature-img-4.jpg" alt="Feature cards 4" class="cards__img">
 
-                <div class="gift-card">
-                    <img src="images/gift-cards-img/feature-img-6.jpg" alt="feature-card-6" class="card">
-                </div>
+                <img src="images/gift-cards-img/feature-img-5.jpg" alt="Feature cards 5" class="cards__img">
 
-                <div class="gift-card">
-                    <img src="images/gift-cards-img/feature-img-7.jpg" alt="feature-card-7" class="card">
-                </div>
+                <img src="images/gift-cards-img/feature-img-6.jpg" alt="Feature cards 6" class="cards__img">
 
-                <div class="gift-card">
-                    <img src="images/gift-cards-img/feature-img-8.jpg" alt="feature-card-8" class="card">
-                </div>
+                <img src="images/gift-cards-img/feature-img-7.jpg" alt="Feature cards 7" class="cards__img">
 
-                <div class="gift-card">
-                    <img src="images/gift-cards-img/feature-img-9.jpg" alt="feature-card-9" class="card">
-                </div>
+                <img src="images/gift-cards-img/feature-img-8.jpg" alt="Feature cards 8" class="cards__img">
 
-                <div class="gift-card">
-                    <img src="images/gift-cards-img/feature-img-10.jpg" alt="feature-card-10" class="card">
-                </div>
+                <img src="images/gift-cards-img/feature-img-9.jpg" alt="Feature cards 9" class="cards__img">
 
-                <div class="gift-card">
-                    <img src="images/gift-cards-img/feature-img-11.jpg" alt="feature-card-11" class="card">
-                </div>
+                <img src="images/gift-cards-img/feature-img-10.jpg" alt="Feature cards 10" class="cards__img">
 
-                <div class="gift-card">
-                    <img src="images/gift-cards-img/feature-img-12.jpg" alt="feature-card-12" class="card">
-                </div>
+                <img src="images/gift-cards-img/feature-img-11.jpg" alt="Feature cards 11" class="cards__img">
 
-                <div class="gift-card">
-                    <img src="images/gift-cards-img/feature-img-13.jpg" alt="feature-card-13" class="card">
-                </div>
+                <img src="images/gift-cards-img/feature-img-12.jpg" alt="Feature cards 12" class="cards__img">
 
-                <div class="gift-card">
-                    <img src="images/gift-cards-img/feature-img-14.jpg" alt="feature-card-14" class="card">
-                </div>
+                <img src="images/gift-cards-img/feature-img-13.jpg" alt="Feature cards 13" class="cards__img">
 
-                <div class="gift-card">
-                    <img src="images/gift-cards-img/feature-img-15.jpg" alt="feature-card-15" class="card">
-                </div>
 
-                <div class="gift-card">
-                    <img src="images/gift-cards-img/feature-img-16.jpg" alt="feature-card-16" class="card">
-                </div>
+                <img src="images/gift-cards-img/feature-img-12.jpg" alt="Feature cards 14" class="cards__img">
 
+
+                <img src="images/gift-cards-img/feature-img-15.jpg" alt="Feature cards 15" class="cards__img">
+
+
+                <img src="images/gift-cards-img/feature-img-16.jpg" alt="Feature cards 16" class="cards__img">
+            </div>
+
+            <div class="cards__button cards__button--right">
+                <button class="cards__button--right cards__button--style">
+                    <svg aria-hidden="true" class="cards__button--style-icon" focusable="false" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" style= "overflow: visible; fill: currentcolor;"><path d="M8.902 17.656c-.293.293-.293.768 0 1.06.293.294.768.294 1.06 0L16.38 12.3c.293-.293.293-.768 0-1.06L9.86 4.72c-.293-.293-.767-.293-1.06 0-.293.293-.293.767 0 1.06l5.99 5.99L8.9 17.656z"></path></svg>
+                </button>
             </div>
         </section>
 
-        <section class="get-gift-card">
-            <div class="blog-container-1">
-                <div class="blog-left">
-                    <p class="got-a-gift-card">Got a gift card?</p>
-                    <p class="earn-2-stars-per-1-dollar">Earns 2&starf; per $1</p>
-                    <button class="add-or-reload">Add or Reload</button>
-                    <button class="check-balance">Check balance</button>
-                </div>
-                <div class="blog-right">
-                    <p class="card-term-and-conditions">Card Terms & Conditions <svg aria-hidden="true" class="valign-middle " focusable="false" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" style="width: 24px; height: 24px; overflow: visible; fill: currentcolor;"><path d="M14.75 18H7.875C6.84 18 6 17.16 6 16.125V9.25c0-1.036.84-1.875 1.875-1.875h5.11c.276 0 .5.224.5.5s-.224.5-.5.5h-5.11c-.483 0-.875.392-.875.875v6.875c0 .483.392.875.875.875h6.875c.483 0 .875-.392.875-.875V11c0-.276.224-.5.5-.5s.5.224.5.5v5.125c0 1.035-.84 1.875-1.875 1.875zM14 6.5c0-.276.224-.5.5-.5h3c.276 0 .5.224.5.5v3c0 .276-.224.5-.5.5s-.5-.224-.5-.5V7.72l-4.66 4.74c-.19.196-.507.2-.704.005-.197-.193-.2-.51-.006-.707L16.307 7H14.5c-.276 0-.5-.224-.5-.5z"></path></svg></p>
-                </div>
+        <section class="text__cards-gift">
+
+            <div class="text__cards-gift-left">
+
+                <p class="text__cards-gift-left-got-a-gift-card">
+                    Got a gift card?
+                </p>
+                <p class="text__cards-gift-left-earns-star">
+                    Earns 2&#9733; per &#36;1
+                </p>
+                <button class="text__cards-gift-left-btn-left">
+                    Add or Reload
+                </button>
+                <button class="text__cards-gift-left-btn-right">
+                    Check balance
+                </button>
+
             </div>
+
+            <div class="text__cards-gift-right">
+
+                <p class="text__cards-gift-right-condition">
+                    Cards Terms &amp; Conditions 
+                </p>
+                <svg aria-hidden="true" class="text__cards-gift-right-condition-icon" focusable="false" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" style="width: 24px; height: 24px; overflow: visible; fill: currentcolor;"><path d="M14.75 18H7.875C6.84 18 6 17.16 6 16.125V9.25c0-1.036.84-1.875 1.875-1.875h5.11c.276 0 .5.224.5.5s-.224.5-.5.5h-5.11c-.483 0-.875.392-.875.875v6.875c0 .483.392.875.875.875h6.875c.483 0 .875-.392.875-.875V11c0-.276.224-.5.5-.5s.5.224.5.5v5.125c0 1.035-.84 1.875-1.875 1.875zM14 6.5c0-.276.224-.5.5-.5h3c.276 0 .5.224.5.5v3c0 .276-.224.5-.5.5s-.5-.224-.5-.5V7.72l-4.66 4.74c-.19.196-.507.2-.704.005-.197-.193-.2-.51-.006-.707L16.307 7H14.5c-.276 0-.5-.224-.5-.5z"></path></svg>
+            </div>
+
         </section>
+
+        <section class="cards cards__summer">
+            Summer
+        </section>
+
+        <section class="cards cards__birthday">
+            Birthday
+        </section>
+
+        <section class="cards cards__thank-you">
+            Thank you
+        </section>
+
+        <section class="cards cards__celebration">
+            Celebration
+        </section>
+
+        <section class="cards cards__appreciation">
+            Appreciation
+        </section>
+
+        <section class="cards cards__parents-day">
+            Parents Day
+        </section>
+
+        <section class="cards cards__friendship-day">
+            Friendship Day
+        </section>
+
+        <section class="cards cards__workplace">
+            Workplace
+        </section>
+
+        <section class="cards cards__encouragement">
+            Encouragement
+        </section>
+
+        <section class="cards cards__affection">
+            Affection
+        </section>
+
+        <section class="cards cards__anytime">
+            Anytime
+        </section>
+
+        <section class="text cards-bulk">
+            gift Cards in bulk
+        </section>
+
+        <section class="text cards-support">
+            Gift Card support
+        </section>
+
+        <div class="helper-blank-1"></div>
+        <div class="helper-blank-2"></div>
+        <div class="helper-blank-3"></div>
     </main>
+
+    <footer class="footer-container">
+        Footer
+    </footer>
 </body>
 
 </html>
