--- a/gift_cards.html
+++ b/gift_cards.html
@@ -82,7 +82,7 @@
             </div>
         </section>
 
-        <!-- TEXT -->
+        <!-- GET GIFT CARDS -->
         <section class="text__cards-gift">
 
             <div class="text__cards-gift-left">
@@ -454,7 +454,7 @@
             </div>
         </section>
 
-        <!-- TEXT -->
+        <!-- BULK GIFT CARDS -->
         <section class="text text__bulk-gift-cards">
             <div class="text__bulk-gift-cards-img">
                 <img src="./images/gift-cards-img/bulk-gift-cards.jpg" alt="Bulk gift card" class="text__bulk-gift-cards-img-1">
@@ -466,10 +466,31 @@
             </div>
         </section>
 
-        <section class="text text__cards-support">
-            Gift Card support
+        <!-- GIFT CARDS SUPPORT -->
+        <section class="cards-support">
+    
+                    <h3 class="cards-support__h3">
+                        Gift Card Support
+                    </h3>
+                    
+                    <p class="cards-support__p">
+                        Use the links below to manage eGifts you have sent or received, or view our full Card Terms & Conditions.
+                    </p>
+
+                <div class="cards-support__btn">
+                    <button class="cards-support__btn-1">
+                        eGift Support
+                    </button>
+                    <button class="cards-support__btn-2">
+                        See Terms & Conditions
+                     </button>
+                     <button class="cards-support__btn-3">
+                        eGift FAQs
+                     </button>
+                </div>
         </section>
 
+        <!-- HELPER BLANK -->
         <div class="helper-blank-1"></div>
         <div class="helper-blank-2"></div>
         <div class="helper-blank-3"></div>
